[gd_scene load_steps=21 format=3 uid="uid://1ikkb4b8mw1w"]

[ext_resource type="Theme" uid="uid://dbgs4id7y5d1c" path="res://UI/Themes/Dark.tres" id="1_dkd36"]
[ext_resource type="Script" uid="uid://b5nh5td5bdsfd" path="res://Scripts/MainMenu.gd" id="1_ocgay"]
[ext_resource type="Texture2D" uid="uid://dbh0vh85wks2l" path="res://UI/logo.png" id="2_6d82g"]
[ext_resource type="Texture2D" uid="uid://6mf6wucl3y6k" path="res://UI/MenuBG/BalconyBG.png" id="2_j6v32"]
[ext_resource type="Texture2D" uid="uid://dr6ir8mgbjrs7" path="res://UI/MenuBG/CStageBG.png" id="3_vaoig"]
[ext_resource type="Texture2D" uid="uid://dyyyg85g3jwip" path="res://UI/MenuBG/ProtoRoadBG.png" id="4_dkd36"]
[ext_resource type="Texture2D" uid="uid://cdp1csnrbd46w" path="res://UI/MenuBG/1StageBG.png" id="6_ha2rd"]
[ext_resource type="Script" uid="uid://c8dhm0nhxqlth" path="res://UI/options_panel.gd" id="8_wdeli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_dkd36"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ha2rd"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wdeli"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wyv1s"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_drn21"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pcbci"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_he4sq"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rsjs4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rj3vb"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_pocyv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8uhic"]

[sub_resource type="LabelSettings" id="LabelSettings_dkd36"]
font_size = 48

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dkd36")
script = ExtResource("1_ocgay")

[node name="PleaseRestart" type="AcceptDialog" parent="."]
auto_translate_mode = 1
initial_position = 2
dialog_text = "Please restart the game for any changes to apply."

[node name="Backgrounds" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="BalconyBG" type="TextureRect" parent="Backgrounds"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_j6v32")
expand_mode = 1

[node name="CStageBG" type="TextureRect" parent="Backgrounds"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_vaoig")
expand_mode = 1

[node name="ProtoRoadBG" type="TextureRect" parent="Backgrounds"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("4_dkd36")
expand_mode = 1

[node name="1StageBG" type="TextureRect" parent="Backgrounds"]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("6_ha2rd")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 64.0
offset_right = 576.0
offset_bottom = 160.0
texture = ExtResource("2_6d82g")

[node name="Buttons" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 60.0
offset_top = -380.0
offset_right = 324.0
offset_bottom = -11.0
grow_vertical = 0

[node name="EditorButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 4.0
offset_right = 260.0
offset_bottom = 52.0
focus_next = NodePath("../FreeRoamButton")
focus_previous = NodePath("../ExitButton")
text = "Editor"

[node name="FreeRoamButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 56.0
offset_right = 260.0
offset_bottom = 104.0
focus_next = NodePath("../ModsButton")
focus_previous = NodePath("../EditorButton")
text = "Free Roam
"

[node name="ModsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 108.0
offset_right = 260.0
offset_bottom = 156.0
focus_next = NodePath("../ControlsButton")
focus_previous = NodePath("../FreeRoamButton")
text = "Manage Mods"

[node name="ControlsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 160.0
offset_right = 260.0
offset_bottom = 208.0
focus_next = NodePath("../CreditsButton")
focus_previous = NodePath("../ModsButton")
text = "Controls"

[node name="CreditsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 212.0
offset_right = 260.0
offset_bottom = 260.0
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ControlsButton")
text = "Credits"

[node name="SettingsButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 264.0
offset_right = 260.0
offset_bottom = 312.0
focus_next = NodePath("../ExitButton")
focus_previous = NodePath("../ControlsButton")
text = "Settings"

[node name="ExitButton" type="Button" parent="Buttons"]
layout_mode = 0
offset_left = 4.0
offset_top = 316.0
offset_right = 260.0
offset_bottom = 364.0
focus_next = NodePath("../EditorButton")
focus_previous = NodePath("../CreditsButton")
text = "Exit to Desktop"

[node name="FreeRoamChooseScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="FreeRoamChooseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.501961)

[node name="InputEater" type="Button" parent="FreeRoamChooseScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dkd36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ha2rd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdeli")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wyv1s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drn21")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcbci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_he4sq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rsjs4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rj3vb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pocyv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8uhic")

[node name="DialogPanel" type="Panel" parent="FreeRoamChooseScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="FreeRoamChooseScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Free Roam"
label_settings = SubResource("LabelSettings_dkd36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Label2" type="Label" parent="FreeRoamChooseScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -96.0
offset_right = 128.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2
text = "Map to load"
vertical_alignment = 1

[node name="MapSelector" type="OptionButton" parent="FreeRoamChooseScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -56.0
offset_right = 128.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 2
selected = 1
item_count = 6
popup/item_0/text = "Generic Showrooms"
popup/item_0/id = 0
popup/item_0/separator = true
popup/item_1/text = "Generic 2-Stage"
popup/item_1/id = 1
popup/item_2/text = "Generic Mini Unit 1-Stage"
popup/item_2/id = 1
popup/item_3/text = "Generic 1-Stage"
popup/item_3/id = 1
popup/item_4/text = "Locations"
popup/item_4/id = 2
popup/item_4/separator = true
popup/item_5/text = "Modded Maps"
popup/item_5/id = 3
popup/item_5/separator = true

[node name="LoadMapButton" type="Button" parent="FreeRoamChooseScreen/DialogPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -128.0
offset_top = -16.0
offset_right = 128.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
text = "Load Map"

[node name="ModsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ModsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.501961)

[node name="InputEater" type="Button" parent="ModsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dkd36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ha2rd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdeli")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wyv1s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drn21")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcbci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_he4sq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rsjs4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rj3vb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pocyv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8uhic")

[node name="DialogPanel" type="Panel" parent="ModsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Mods"
label_settings = SubResource("LabelSettings_dkd36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ModList" type="ItemList" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 128.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2

[node name="ModNameText" type="Label" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_bottom = 40.0
text = "Select a mod to view its information"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="ModAuthorText" type="Label" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 40.0
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="ModVersionText" type="Label" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 1.0
anchor_right = 0.25
anchor_bottom = 1.0
offset_left = 8.0
offset_top = -40.0
offset_bottom = -8.0
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3

[node name="ModDescriptionText" type="Label" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 48.0
offset_right = -8.0
offset_bottom = -48.0
grow_horizontal = 2
grow_vertical = 2
autowrap_mode = 2
clip_text = true
text_overrun_behavior = 3

[node name="OpenFolderButton" type="Button" parent="ModsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Open Mods Folder"

[node name="ControlsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.501961)

[node name="InputEater" type="Button" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dkd36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ha2rd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdeli")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wyv1s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drn21")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcbci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_he4sq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rsjs4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rj3vb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pocyv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8uhic")

[node name="DialogPanel" type="Panel" parent="ControlsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="ControlsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Controls"
label_settings = SubResource("LabelSettings_dkd36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="EditorLabel" type="Label" parent="ControlsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 128.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Global:
Fullscreen: F11 or Alt+Enter

In Editor:

Fullscreen camera view: ESC
Play/Pause: Space
Play Reverse: Shift + Space
Fast Forward: Shift + Right Arrow
Fast Reverse: Shift + Left
Step Forward: Right Arrow
Step Backward: Left Arrow
Stop: Home
Change Camera Angle: Tab"

[node name="FreeRoamLabel" type="Label" parent="ControlsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 128.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "


In Free Roam:

Move: W, A, S, D
Jump: Space
Crouch: Right Control
Run: Right Shift
Toggle Flashlight: E
Open Curtains: C
Debug Info: F3
Open Menu: ESC"

[node name="CreditsScreen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.501961)

[node name="InputEater" type="Button" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dkd36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ha2rd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdeli")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wyv1s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drn21")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcbci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_he4sq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rsjs4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rj3vb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pocyv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8uhic")

[node name="DialogPanel" type="Panel" parent="CreditsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="CreditsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Credits"
label_settings = SubResource("LabelSettings_dkd36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="CreditsLabel" type="Label" parent="CreditsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 128.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Pneumatic Plaything Animatronic Simulator

Project Oversight: Persephone (KawaiiZenbo)

Interface Design: Persephone
Simulator Backend: Persephone

Models:
Persephone: Helen House, Cyberamics, 1-Stage, C-Stage,
Prototype Road Stage
Luigigamin212: Chuck E's Corner
ToastHQ: Balcony Stage, 3-Stage, 3-Stage Bots
Avery: Cyberamic Iris Textures

This project is not associated with CEC Entertainment LLC. 
or Creative Engineering Inc."
horizontal_alignment = 1

[node name="SettingsScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.121569, 0.121569, 0.121569, 0.501961)

[node name="InputEater" type="Button" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_dkd36")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_ha2rd")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_wdeli")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_wyv1s")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_drn21")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_pcbci")
theme_override_styles/hover = SubResource("StyleBoxEmpty_he4sq")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_rsjs4")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_rj3vb")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_pocyv")
theme_override_styles/normal = SubResource("StyleBoxEmpty_8uhic")

[node name="DialogPanel" type="Panel" parent="SettingsScreen"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
offset_right = -64.0
offset_bottom = -64.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="SettingsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
offset_bottom = 112.0
grow_horizontal = 2
text = "Settings"
label_settings = SubResource("LabelSettings_dkd36")
horizontal_alignment = 1
vertical_alignment = 1

[node name="TabBar" type="TabBar" parent="SettingsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.173
anchor_right = 1.019
anchor_bottom = 0.252
offset_left = -1.0
offset_top = -3.41601
offset_right = -10.0
offset_bottom = -19.184
grow_horizontal = 2
grow_vertical = 2
current_tab = 0
tab_count = 1
tab_0/title = "Graphics"

[node name="GraphicsPanel" type="Panel" parent="SettingsScreen/DialogPanel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.218
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 0.944
offset_right = 1.0
offset_bottom = -2.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("8_wdeli")

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsScreen/DialogPanel/GraphicsPanel"]
layout_direction = 2
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -25

[node name="labels" type="VBoxContainer" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer"]
custom_minimum_size = Vector2(180, 0)
layout_mode = 2
theme_override_constants/separation = 15

[node name="antialiasing_msaa" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/labels"]
layout_mode = 2
text = "Antialiasing (MSAA):"
horizontal_alignment = 2

[node name="aa_screenspace" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/labels"]
layout_mode = 2
text = "Screenspace AA:"
horizontal_alignment = 2

[node name="FOV" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/labels"]
layout_mode = 2
text = "Field of View:"
horizontal_alignment = 2

[node name="settings" type="VBoxContainer" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 6

[node name="option_aa_msaa" type="OptionButton" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings"]
layout_mode = 2
alignment = 1
selected = 1
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "2x"
popup/item_1/id = 1
popup/item_2/text = "4x"
popup/item_2/id = 2
popup/item_3/text = "8x"
popup/item_3/id = 3

[node name="option_aa_ss" type="OptionButton" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings"]
layout_mode = 2
alignment = 1
selected = 1
item_count = 2
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "FXAA"
popup/item_1/id = 1

[node name="fov_slider" type="HSlider" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings"]
custom_minimum_size = Vector2(215, 0)
layout_mode = 2
min_value = 60.0
value = 60.0
ticks_on_borders = true

[node name="Label" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/fov_slider"]
layout_mode = 0
offset_left = -2.0
offset_top = 9.0
offset_right = 38.0
offset_bottom = 32.0
text = "60"

[node name="Label2" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/fov_slider"]
layout_mode = 0
offset_left = 197.0
offset_top = 8.0
offset_right = 237.0
offset_bottom = 31.0
text = "100"

[node name="Label3" type="Label" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/fov_slider"]
layout_mode = 0
offset_left = 87.0
offset_top = 12.0
offset_right = 127.0
offset_bottom = 35.0
text = "FOV"
horizontal_alignment = 1

[node name="spacer" type="Container" parent="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings"]
custom_minimum_size = Vector2(0, 18.18)
layout_mode = 2

[node name="VersionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -264.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
text = "Pneumatic Plaything vX.X"
horizontal_alignment = 2
vertical_alignment = 1

[connection signal="pressed" from="Buttons/EditorButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Buttons/FreeRoamButton" to="." method="_on_free_roam_button_pressed"]
[connection signal="pressed" from="Buttons/ModsButton" to="." method="_on_mods_button_pressed"]
[connection signal="pressed" from="Buttons/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="Buttons/CreditsButton" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="Buttons/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="Buttons/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="FreeRoamChooseScreen/InputEater" to="." method="_on_input_eater_pressed"]
[connection signal="pressed" from="FreeRoamChooseScreen/DialogPanel/LoadMapButton" to="." method="_on_load_map_button_pressed"]
[connection signal="pressed" from="ModsScreen/InputEater" to="." method="_on_input_eater_pressed"]
[connection signal="item_selected" from="ModsScreen/DialogPanel/ModList" to="." method="_on_mod_list_item_selected"]
[connection signal="pressed" from="ModsScreen/DialogPanel/OpenFolderButton" to="." method="_on_open_folder_button_pressed"]
[connection signal="pressed" from="ControlsScreen/InputEater" to="." method="_on_input_eater_pressed"]
[connection signal="pressed" from="CreditsScreen/InputEater" to="." method="_on_input_eater_pressed"]
[connection signal="pressed" from="SettingsScreen/InputEater" to="." method="_on_input_eater_pressed"]
[connection signal="tab_changed" from="SettingsScreen/DialogPanel/TabBar" to="SettingsScreen/DialogPanel/GraphicsPanel" method="_on_tab_bar_tab_changed"]
[connection signal="item_selected" from="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/option_aa_msaa" to="SettingsScreen/DialogPanel/GraphicsPanel" method="_on_option_aa_msaa_item_selected"]
[connection signal="item_selected" from="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/option_aa_ss" to="SettingsScreen/DialogPanel/GraphicsPanel" method="_on_option_aa_ss_item_selected"]
[connection signal="value_changed" from="SettingsScreen/DialogPanel/GraphicsPanel/HBoxContainer/settings/fov_slider" to="SettingsScreen/DialogPanel/GraphicsPanel" method="_on_fov_slider_value_changed"]
